fix: reconcile R4 to approved deep microscope
Replace the concurrent duplicate R4 path with the approved Deep R4 implementation: five-point geometry residuals, independent XS/S/M N×N template diagnostics, cross-model cosine deltas, real 18-block activation statistics, and model-linked stale-frame-safe rendering.