@@ -6,10 +6,7 @@ import android.graphics.Bitmap;
 import java.io.ByteArrayOutputStream;
 import java.io.InputStream;
 import java.nio.FloatBuffer;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
-import java.util.Optional;
 import java.util.Set;
 
 import ai.onnxruntime.OnnxTensor;
@@ -20,32 +17,39 @@ import ai.onnxruntime.OrtSession;
 public final class FaceRecognizer implements AutoCloseable {
     private static final int SIZE = 112;
     private static final int EMBEDDING = 512;
-    private static final Set<String> DIAGNOSTIC_OUTPUTS = Collections.unmodifiableSet(
-            new HashSet<>(Arrays.asList("embedding", "block_stats", "stage_stats", "prehead")));
+    private static final Set<String> EMBEDDING_ONLY = Set.of("embedding");
+    private static final Set<String> DIAGNOSTIC_OUTPUTS = Set.of(
+            "embedding", "block_stats", "stage_stats", "prehead_stats");
 
-    public static final class DiagnosticEmbedding {
+    public static final class DiagnosticResult {
         public final float[] embedding;
-        public final ModelDiagnostics diagnostics;
+        public final DeepModelStats stats;
 
-        DiagnosticEmbedding(float[] embedding, ModelDiagnostics diagnostics) {
+        DiagnosticResult(float[] embedding, DeepModelStats stats) {
             this.embedding = embedding;
-            this.diagnostics = diagnostics;
+            this.stats = stats;
         }
     }
 
     private final OrtEnvironment env;
     private final OrtSession session;
     private final String inputName;
+    private final ModelVariant variant;
 
     public FaceRecognizer(Context context) throws Exception {
         this(context, ModelVariant.S);
     }
 
     public FaceRecognizer(Context context, ModelVariant variant) throws Exception {
-        this(context, variant.assetName);
+        this(context, variant, variant.assetName);
     }
 
     public FaceRecognizer(Context context, String assetName) throws Exception {
+        this(context, ModelVariant.S, assetName);
+    }
+
+    private FaceRecognizer(Context context, ModelVariant variant, String assetName) throws Exception {
+        this.variant = variant == null ? ModelVariant.S : variant;
         env = OrtEnvironment.getEnvironment();
         byte[] model = readAsset(context, assetName);
         OrtSession.SessionOptions options = new OrtSession.SessionOptions();
@@ -56,34 +60,69 @@ public final class FaceRecognizer implements AutoCloseable {
     }
 
     public float[] embed(Bitmap aligned) throws Exception {
-        float[] chw = preprocess(aligned);
+        float[] chw = pack(aligned);
         long[] shape = {1, 3, SIZE, SIZE};
         try (OnnxTensor tensor = OnnxTensor.createTensor(env, FloatBuffer.wrap(chw), shape);
-             OrtSession.Result result = session.run(
-                     Collections.singletonMap(inputName, tensor), Collections.singleton("embedding"))) {
-            return VectorMath.normalize(readVector(requiredValue(result, "embedding"), EMBEDDING, "embedding"));
+             OrtSession.Result result = session.run(Collections.singletonMap(inputName, tensor), EMBEDDING_ONLY)) {
+            return parseEmbedding(value(result, "embedding"));
         }
     }
 
-    public DiagnosticEmbedding embedWithDiagnostics(Bitmap aligned) throws Exception {
-        float[] chw = preprocess(aligned);
+    public DiagnosticResult diagnose(Bitmap aligned) throws Exception {
+        float[] chw = pack(aligned);
         long[] shape = {1, 3, SIZE, SIZE};
         try (OnnxTensor tensor = OnnxTensor.createTensor(env, FloatBuffer.wrap(chw), shape);
-             OrtSession.Result result = session.run(
-                     Collections.singletonMap(inputName, tensor), DIAGNOSTIC_OUTPUTS)) {
-            float[] embedding = VectorMath.normalize(
-                    readVector(requiredValue(result, "embedding"), EMBEDDING, "embedding"));
-            float[][] blocks = readMatrix(requiredValue(result, "block_stats"),
-                    ModelDiagnostics.BLOCK_COUNT, ModelDiagnostics.STAT_COUNT, "block_stats");
-            float[][] stages = readMatrix(requiredValue(result, "stage_stats"),
-                    ModelDiagnostics.STAGE_COUNT, ModelDiagnostics.STAT_COUNT, "stage_stats");
-            float[] prehead = readVector(requiredValue(result, "prehead"),
-                    ModelDiagnostics.PREHEAD_DIM, "prehead");
-            return new DiagnosticEmbedding(embedding, ModelDiagnostics.of(blocks, stages, prehead));
+             OrtSession.Result result = session.run(Collections.singletonMap(inputName, tensor), DIAGNOSTIC_OUTPUTS)) {
+            float[] embedding = parseEmbedding(value(result, "embedding"));
+            float[][] blocks = as2d(value(result, "block_stats"), 18, 5, "block_stats");
+            float[][] stages = as2d(value(result, "stage_stats"), 4, 4, "stage_stats");
+            float[] prehead = as1d(value(result, "prehead_stats"), 4, "prehead_stats");
+            return new DiagnosticResult(embedding, new DeepModelStats(variant, blocks, stages, prehead));
         }
     }
 
-    private static float[] preprocess(Bitmap aligned) {
+    private static OnnxValue value(OrtSession.Result result, String name) {
+        return result.get(name).orElseThrow(() -> new IllegalStateException("Missing ONNX output: " + name));
+    }
+
+    private static float[] parseEmbedding(OnnxValue value) throws Exception {
+        Object rawValue = value.getValue();
+        float[] raw;
+        if (rawValue instanceof float[][]) {
+            raw = ((float[][]) rawValue)[0];
+        } else if (rawValue instanceof float[]) {
+            raw = (float[]) rawValue;
+        } else {
+            throw new IllegalStateException("Unexpected embedding output type: " + rawValue.getClass());
+        }
+        if (raw.length != EMBEDDING) {
+            throw new IllegalStateException("Unexpected embedding size: " + raw.length);
+        }
+        return VectorMath.normalize(raw);
+    }
+
+    private static float[][] as2d(OnnxValue value, int rows, int cols, String name) throws Exception {
+        Object raw = value.getValue();
+        if (!(raw instanceof float[][])) throw new IllegalStateException(name + " must be float[][]");
+        float[][] data = (float[][]) raw;
+        if (data.length != rows) throw new IllegalStateException(name + " rows=" + data.length);
+        float[][] copy = new float[rows][cols];
+        for (int r = 0; r < rows; r++) {
+            if (data[r].length != cols) throw new IllegalStateException(name + " cols=" + data[r].length);
+            System.arraycopy(data[r], 0, copy[r], 0, cols);
+        }
+        return copy;
+    }
+
+    private static float[] as1d(OnnxValue value, int size, String name) throws Exception {
+        Object raw = value.getValue();
+        if (!(raw instanceof float[])) throw new IllegalStateException(name + " must be float[]");
+        float[] data = (float[]) raw;
+        if (data.length != size) throw new IllegalStateException(name + " size=" + data.length);
+        return data.clone();
+    }
+
+    private static float[] pack(Bitmap aligned) {
         Bitmap input = aligned.getWidth() == SIZE && aligned.getHeight() == SIZE
                 ? aligned : Bitmap.createScaledBitmap(aligned, SIZE, SIZE, true);
         int[] pixels = new int[SIZE * SIZE];
@@ -100,47 +139,6 @@ public final class FaceRecognizer implements AutoCloseable {
             chw[2 * plane + i] = b;
         }
         return chw;
-    }
-
-    private static Object requiredValue(OrtSession.Result result, String name) throws Exception {
-        Optional<OnnxValue> value = result.get(name);
-        if (!value.isPresent()) throw new IllegalStateException("Missing ONNX output: " + name);
-        return value.get().getValue();
-    }
-
-    private static float[] readVector(Object value, int expected, String label) {
-        float[] raw;
-        if (value instanceof float[][]) {
-            float[][] values = (float[][]) value;
-            if (values.length != 1) throw new IllegalStateException(label + " batch must be 1");
-            raw = values[0];
-        } else if (value instanceof float[]) {
-            raw = (float[]) value;
-        } else {
-            throw new IllegalStateException("Unexpected " + label + " type: " + value.getClass());
-        }
-        if (raw.length != expected) {
-            throw new IllegalStateException("Unexpected " + label + " size: " + raw.length + " != " + expected);
-        }
-        return raw.clone();
-    }
-
-    private static float[][] readMatrix(Object value, int rows, int cols, String label) {
-        if (!(value instanceof float[][])) {
-            throw new IllegalStateException("Unexpected " + label + " type: " + value.getClass());
-        }
-        float[][] raw = (float[][]) value;
-        if (raw.length != rows) {
-            throw new IllegalStateException("Unexpected " + label + " rows: " + raw.length + " != " + rows);
-        }
-        float[][] out = new float[rows][];
-        for (int r = 0; r < rows; r++) {
-            if (raw[r] == null || raw[r].length != cols) {
-                throw new IllegalStateException("Unexpected " + label + " columns at row " + r);
-            }
-            out[r] = raw[r].clone();
-        }
-        return out;
     }
 
     private static byte[] readAsset(Context context, String name) throws Exception {
